@@ -8,11 +8,7 @@ if (!$::Driver) { use FindBin; exec("$FindBin::Bin/bootstrap.pl", @ARGV, $0); di
 # Version 2.0.
 
 compile (
-	 verilator_flags2 => [qw(-Wfuture-FUTURE1 -Wfuture-FUTURE2)],
-	 );
-
-execute (
-	 check_finished=>1,
+	 verilator_flags2 => [qw(--lint-only -Wfuture-FUTURE1 -Wfuture-FUTURE2)],
 	 );
 
 ok(1);
